echo /usr/lib/*-linux-gnu*/jni | tr ' ' ':'